--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "https://2.lisoma.workers.dev",
+            SCF_GATEWAY: "https://meri1drive.lisoma.workers.dev",
             SITE_NAME: "OneDrive",
             IS_CF: true
         };
